# OpenTIM

./: .gitignore  Cargo.toml  Makefile  Makefile.test  README.md  build.rs
c_src/: .gitignore  arctan.c  bmp_scn_decode.c  decode_errors.h  draw_rope.c  globals.c  globals.h  int.h  lzw_decode.c  main.c  part_defs.c  parttype.h  sine.c  testing.c  testing.h  tim.h
reverse-engineering/: README.md  gdi.spec  kernel.spec  parse-spec.py  partScrubber.html  partScrubber.js  user.spec
reverse-engineering/ghidra-scripts/: .gitignore  rename-win16-fns.py  tim-create-abs-calls.py  tim-label-clear-condition-functions.py  tim-label-functions-used-in-data30.py  tim-label-functions-used-in-data31.py  tim-patch-adjuststack.py  tim-patch-strange-multiplication-calls.py  tim-read-part-info.py  tim_patch_bytes.py
rusttest/: Cargo.toml
rusttest/src/: bmp_scn.rs  buffer_snake.rs  debug.rs  lzhuf.rs  main.rs  math.rs  nannou.rs  resource_dos.rs
rusttest/src/decoders/: lzhuf.rs  lzw.rs  mod.rs
rusttest/src/image/: bmp_scn.rs  scr.rs
scripts/: README.md  deserialize-parts.py  generate-structs.py  read-acceleration-from-segment-31.py  tim_structures.py
src/: arctan.c  atmosphere.rs  buffer_snake.rs  debug.rs  draw_rope.c  endianess.h  generic_decode.c  generic_decode.h  globals.c  globals.h  level_file_format.rs  level_load.rs  lzhuf_decode.c  lzhuf_decode.h  lzw_decode.c  lzw_decode.h  main.c  main.rs  math.rs  nannou.rs  part.rs  part_defs.c  parttype.h  resource_dos.rs  testing.c  testing.h  tim.h  tim_c.rs
structures/: BeltData.csv  Part.csv  PartType.csv  RopeData.csv
(+8 files in other folders)
