[package]
name = "rusttest"
version = "0.1.0"
authors = ["Danny Spencer <dan.spencer.np@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
# panic = "abort"
