[package]
name = "rusttest"
version = "0.1.0"
authors = ["Danny Spencer <dan.spencer.np@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
num_enum = "0.5.1"
# Using latest nannou until 0.15.0 comes out.
# 0.14.1 has the bug: https://github.com/nannou-org/nannou/issues/611
nannou = { git = "https://github.com/nannou-org/nannou", branch = "master" }

[build-dependencies]
cc = "1.0"